--- a/ThankYouRelay/Base.lproj/Main.storyboard
+++ b/ThankYouRelay/Base.lproj/Main.storyboard
@@ -1,24 +1,189 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="spb-DW-Ps7">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--感謝-->
+        <scene sceneID="AZX-GK-vMf">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="kcz-a5-T74" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xd4-c4-YWH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="BIl-Js-b7D"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="感謝" image="handshake_icon" id="zlU-Hs-sAv" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="WBp-q5-88b" id="QZ5-4f-jJ0"/>
+                        </connections>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tDC-SO-ddu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="WBp-q5-88b" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="-208" y="416"/>
+        </scene>
+        <!--Top-->
+        <scene sceneID="0kh-Fh-k4P">
+            <objects>
+                <viewController id="2c9-Mh-N4b" customClass="TopViewController" customModule="ThankYouRelay" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Tf2-gg-LV2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aDm-hT-8vG" customClass="TransitionButton" customModule="ThankYouRelay" customModuleProvider="target">
+                                <rect key="frame" x="152" y="509" width="70" height="69"/>
+                                <color key="backgroundColor" red="0.66896045209999999" green="0.23593088979999999" blue="0.2503652086" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Top">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="currentBackgroundColor">
+                                        <color key="value" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="35"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="aBT-kX-TSx" kind="show" id="83f-Ak-UD1"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aDm-hT-8vG" firstAttribute="leading" secondItem="RQU-Fb-M1G" secondAttribute="leading" constant="152" id="9bK-He-iEB"/>
+                            <constraint firstItem="aDm-hT-8vG" firstAttribute="top" secondItem="RQU-Fb-M1G" secondAttribute="top" constant="489" id="MK0-8e-4A5"/>
+                            <constraint firstItem="RQU-Fb-M1G" firstAttribute="bottom" secondItem="aDm-hT-8vG" secondAttribute="bottom" constant="40" id="dLD-Dx-7jb"/>
+                            <constraint firstItem="aDm-hT-8vG" firstAttribute="centerX" secondItem="Tf2-gg-LV2" secondAttribute="centerX" id="fxa-mU-DWk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RQU-Fb-M1G"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Top" image="user_icon" id="9l8-uh-MLl" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="QfB-ih-RXU" id="DYT-07-4XE"/>
+                        </connections>
+                    </tabBarItem>
+                    <connections>
+                        <outlet property="button" destination="aDm-hT-8vG" id="iO0-sD-YgZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A7g-KL-8Cn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="QfB-ih-RXU" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="512.79999999999995" y="35.532233883058474"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bO5-Bj-QOh">
+            <objects>
+                <viewController id="aBT-kX-TSx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1rq-s6-Oc3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAJ-a1-5MP" customClass="TransitionButton" customModule="ThankYouRelay" customModuleProvider="target">
+                                <rect key="frame" x="152" y="509" width="70" height="69"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="currentBackgroundColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="35"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.66896045209999999" green="0.23593088979999999" blue="0.2503652086" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0hi-hF-ATB" firstAttribute="bottom" secondItem="WAJ-a1-5MP" secondAttribute="bottom" constant="40" id="1bF-4s-Q7g"/>
+                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="centerX" secondItem="1rq-s6-Oc3" secondAttribute="centerX" id="G6L-ae-mZ0"/>
+                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="top" secondItem="0hi-hF-ATB" secondAttribute="top" constant="489" id="ivs-Xh-dcZ"/>
+                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="leading" secondItem="0hi-hF-ATB" secondAttribute="leading" constant="152" id="sj9-Ma-kaW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0hi-hF-ATB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qW2-8I-VgQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1224.8" y="35.532233883058474"/>
+        </scene>
+        <!--換金-->
+        <scene sceneID="rL2-SV-Zfq">
+            <objects>
+                <viewController id="uiT-QU-xRy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4SE-67-yNv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is Item 1 page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tL4-jq-oHM">
+                                <rect key="frame" x="116" y="323" width="142" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tL4-jq-oHM" firstAttribute="centerX" secondItem="4SE-67-yNv" secondAttribute="centerX" id="AmA-Mx-2BW"/>
+                            <constraint firstItem="tL4-jq-oHM" firstAttribute="centerY" secondItem="4SE-67-yNv" secondAttribute="centerY" id="Jsw-fZ-Pe6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dRL-SQ-fbG"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="換金" image="cash_icon" id="Rgc-pI-EZe" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="yOffSet">
+                                <real key="value" value="0.0"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <outlet property="animation" destination="vIy-Xj-iDv" id="nci-Pi-KOa"/>
+                        </connections>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YuE-Zg-227" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="vIy-Xj-iDv" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="-218" y="-295"/>
+        </scene>
+        <!--Animated Tab Bar Controller-->
+        <scene sceneID="IQT-Nf-pGX">
+            <objects>
+                <tabBarController id="spb-DW-Ps7" customClass="RAMAnimatedTabBarController" customModule="RAMAnimatedTabBarController" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Qz-FU-FOO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="uiT-QU-xRy" kind="relationship" relationship="viewControllers" id="eNm-7m-2Cd"/>
+                        <segue destination="2c9-Mh-N4b" kind="relationship" relationship="viewControllers" id="9fe-07-FT8"/>
+                        <segue destination="kcz-a5-T74" kind="relationship" relationship="viewControllers" id="Xqb-Zs-xgd"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IlZ-Sb-eaP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1170" y="37"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cash_icon" width="30" height="30"/>
+        <image name="handshake_icon" width="30" height="30"/>
+        <image name="user_icon" width="30" height="30"/>
+    </resources>
 </document>
