--- a/ThankYouRelay/Base.lproj/Main.storyboard
+++ b/ThankYouRelay/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--感謝-->
+        <!--感謝する人を選択-->
         <scene sceneID="AZX-GK-vMf">
             <objects>
                 <viewController id="kcz-a5-T74" sceneMemberID="viewController">
@@ -20,18 +20,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="BIl-Js-b7D"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="感謝" image="handshake_icon" id="zlU-Hs-sAv" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
-                        <connections>
-                            <outlet property="animation" destination="WBp-q5-88b" id="QZ5-4f-jJ0"/>
-                        </connections>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" title="感謝する人を選択" id="FjZ-h2-k2f"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tDC-SO-ddu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="WBp-q5-88b" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
             </objects>
-            <point key="canvasLocation" x="-208" y="416"/>
+            <point key="canvasLocation" x="420" y="701.19940029985014"/>
         </scene>
-        <!--Top-->
+        <!--感謝履歴-->
         <scene sceneID="0kh-Fh-k4P">
             <objects>
                 <viewController id="2c9-Mh-N4b" customClass="TopViewController" customModule="ThankYouRelay" customModuleProvider="target" sceneMemberID="viewController">
@@ -71,19 +67,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RQU-Fb-M1G"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Top" image="user_icon" id="9l8-uh-MLl" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
-                        <connections>
-                            <outlet property="animation" destination="QfB-ih-RXU" id="DYT-07-4XE"/>
-                        </connections>
-                    </tabBarItem>
+                    <navigationItem key="navigationItem" title="感謝履歴" id="XDk-Vy-js8"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="button" destination="aDm-hT-8vG" id="iO0-sD-YgZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7g-KL-8Cn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="QfB-ih-RXU" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
             </objects>
-            <point key="canvasLocation" x="512.79999999999995" y="35.532233883058474"/>
+            <point key="canvasLocation" x="1100" y="35"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="bO5-Bj-QOh">
@@ -131,9 +123,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qW2-8I-VgQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1224.8" y="35.532233883058474"/>
+            <point key="canvasLocation" x="1753" y="35"/>
         </scene>
-        <!--換金-->
+        <!--換金一覧-->
         <scene sceneID="rL2-SV-Zfq">
             <objects>
                 <viewController id="uiT-QU-xRy" sceneMemberID="viewController">
@@ -155,6 +147,85 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dRL-SQ-fbG"/>
                     </view>
+                    <navigationItem key="navigationItem" title="換金一覧" id="zbo-kx-vj7"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YuE-Zg-227" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="425" y="-636"/>
+        </scene>
+        <!--Animated Tab Bar Controller-->
+        <scene sceneID="IQT-Nf-pGX">
+            <objects>
+                <tabBarController id="spb-DW-Ps7" customClass="RAMAnimatedTabBarController" customModule="RAMAnimatedTabBarController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="Tre-cq-jwO"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Qz-FU-FOO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Pk1-57-8wN" kind="relationship" relationship="viewControllers" id="eNm-7m-2Cd"/>
+                        <segue destination="fw5-k2-WUd" kind="relationship" relationship="viewControllers" id="9fe-07-FT8"/>
+                        <segue destination="43P-mo-zyV" kind="relationship" relationship="viewControllers" id="Xqb-Zs-xgd"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IlZ-Sb-eaP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1170" y="37"/>
+        </scene>
+        <!--Top-->
+        <scene sceneID="aVE-It-LbI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fw5-k2-WUd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Top" image="user_icon" id="9l8-uh-MLl" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="QfB-ih-RXU" id="DYT-07-4XE"/>
+                        </connections>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DVL-bu-RYQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2c9-Mh-N4b" kind="relationship" relationship="rootViewController" id="qo1-Nv-C42"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hn-wz-hoy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="QfB-ih-RXU" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="426" y="35"/>
+        </scene>
+        <!--感謝-->
+        <scene sceneID="4hz-FL-h8s">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="43P-mo-zyV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="感謝" image="handshake_icon" id="zlU-Hs-sAv" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="WBp-q5-88b" id="QZ5-4f-jJ0"/>
+                        </connections>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5vr-Al-7RI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kcz-a5-T74" kind="relationship" relationship="rootViewController" id="sly-VT-o9I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ihO-bk-4e4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="WBp-q5-88b" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="-303" y="701"/>
+        </scene>
+        <!--換金-->
+        <scene sceneID="oFH-Xd-9LI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pk1-57-8wN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="換金" image="cash_icon" id="Rgc-pI-EZe" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="yOffSet">
@@ -165,30 +236,20 @@
                             <outlet property="animation" destination="vIy-Xj-iDv" id="nci-Pi-KOa"/>
                         </connections>
                     </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YuE-Zg-227" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Alx-nW-mAg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uiT-QU-xRy" kind="relationship" relationship="rootViewController" id="9KL-ge-hX6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rw5-Cq-FQ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <customObject id="vIy-Xj-iDv" customClass="RAMFlipRightTransitionItemAnimations" customModule="RAMAnimatedTabBarController"/>
             </objects>
-            <point key="canvasLocation" x="-218" y="-295"/>
-        </scene>
-        <!--Animated Tab Bar Controller-->
-        <scene sceneID="IQT-Nf-pGX">
-            <objects>
-                <tabBarController id="spb-DW-Ps7" customClass="RAMAnimatedTabBarController" customModule="RAMAnimatedTabBarController" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Qz-FU-FOO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="uiT-QU-xRy" kind="relationship" relationship="viewControllers" id="eNm-7m-2Cd"/>
-                        <segue destination="2c9-Mh-N4b" kind="relationship" relationship="viewControllers" id="9fe-07-FT8"/>
-                        <segue destination="kcz-a5-T74" kind="relationship" relationship="viewControllers" id="Xqb-Zs-xgd"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IlZ-Sb-eaP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1170" y="37"/>
+            <point key="canvasLocation" x="-303" y="-636"/>
         </scene>
     </scenes>
     <resources>
