--- a/ThankYouRelay/Base.lproj/Main.storyboard
+++ b/ThankYouRelay/Base.lproj/Main.storyboard
@@ -11,21 +11,42 @@
     </dependencies>
     <scenes>
         <!--感謝する人を選択-->
-        <scene sceneID="AZX-GK-vMf">
+        <scene sceneID="hSi-SP-tZi">
             <objects>
-                <viewController id="kcz-a5-T74" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="xd4-c4-YWH">
+                <tableViewController id="SOe-pp-MxZ" customClass="ThankYouListViewController" customModule="ThankYouRelay" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5yJ-1e-86D">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="BIl-Js-b7D"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="感謝する人を選択" id="FjZ-h2-k2f"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tDC-SO-ddu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="MC5-0P-Xgf" style="IBUITableViewCellStyleDefault" id="pKb-kf-zE2">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pKb-kf-zE2" id="mWl-xt-rHa">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MC5-0P-Xgf">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SOe-pp-MxZ" id="qOR-h4-GSG"/>
+                            <outlet property="delegate" destination="SOe-pp-MxZ" id="W3b-Yg-ZCq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="感謝する人を選択" id="Eeh-5B-ACt"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iza-b0-01r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="420" y="701.19940029985014"/>
+            <point key="canvasLocation" x="425" y="700"/>
         </scene>
         <!--感謝履歴-->
         <scene sceneID="0kh-Fh-k4P">
@@ -44,7 +65,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <color key="tintColor" red="0.66896045209999999" green="0.23593088979999999" blue="0.2503652086" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Top">
+                                <state key="normal" title="50pt">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -59,11 +80,18 @@
                                     <segue destination="aBT-kX-TSx" kind="modal" id="HcZ-ml-L6a"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TopImage" translatesAutoresizingMaskIntoConstraints="NO" id="QlO-BQ-l3E">
+                                <rect key="frame" x="0.0" y="64" width="375" height="443"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="aDm-hT-8vG" firstAttribute="top" secondItem="QlO-BQ-l3E" secondAttribute="bottom" constant="1" id="2S7-RV-HM3"/>
+                            <constraint firstItem="QlO-BQ-l3E" firstAttribute="top" secondItem="RQU-Fb-M1G" secondAttribute="top" id="8Bx-8d-fv8"/>
                             <constraint firstItem="RQU-Fb-M1G" firstAttribute="bottom" secondItem="aDm-hT-8vG" secondAttribute="bottom" constant="40" id="iWu-RJ-7Kh"/>
+                            <constraint firstItem="QlO-BQ-l3E" firstAttribute="centerX" secondItem="aDm-hT-8vG" secondAttribute="centerX" id="jhF-97-pIj"/>
                             <constraint firstItem="aDm-hT-8vG" firstAttribute="centerX" secondItem="Tf2-gg-LV2" secondAttribute="centerX" id="p0D-rv-wZX"/>
+                            <constraint firstItem="QlO-BQ-l3E" firstAttribute="leading" secondItem="Tf2-gg-LV2" secondAttribute="leading" id="vGQ-qS-kcw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RQU-Fb-M1G"/>
                     </view>
@@ -75,7 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7g-KL-8Cn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1100" y="35"/>
+            <point key="canvasLocation" x="1100" y="34.632683658170919"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="bO5-Bj-QOh">
@@ -89,8 +117,8 @@
                                 <rect key="frame" x="152" y="507" width="70" height="70"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="Ztb-G6-VVF"/>
-                                    <constraint firstAttribute="width" constant="70" id="pBL-cS-NaC"/>
+                                    <constraint firstAttribute="height" constant="70" id="Kir-Sq-9x0"/>
+                                    <constraint firstAttribute="width" constant="70" id="w3S-WU-i2H"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -109,11 +137,29 @@
                                     <action selector="closeAction:" destination="aBT-kX-TSx" eventType="touchUpInside" id="JaH-xT-Nk4"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="感謝情報詳細" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUN-e6-izY">
+                                <rect key="frame" x="108" y="30" width="159" height="32"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GraphImage" translatesAutoresizingMaskIntoConstraints="NO" id="7cc-7J-RLd">
+                                <rect key="frame" x="0.0" y="70" width="375" height="429"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="429" id="pQa-tS-20J"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.66896045209999999" green="0.23593088979999999" blue="0.2503652086" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="0hi-hF-ATB" firstAttribute="bottom" secondItem="WAJ-a1-5MP" secondAttribute="bottom" constant="90" id="GUj-Wf-TqH"/>
-                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="centerX" secondItem="1rq-s6-Oc3" secondAttribute="centerX" id="eGL-QR-y4E"/>
+                            <constraint firstItem="7cc-7J-RLd" firstAttribute="leading" secondItem="1rq-s6-Oc3" secondAttribute="leading" id="4fL-Sx-2Tp"/>
+                            <constraint firstItem="7cc-7J-RLd" firstAttribute="top" secondItem="SUN-e6-izY" secondAttribute="bottom" constant="8" symbolic="YES" id="HRt-tp-Mte"/>
+                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="centerX" secondItem="1rq-s6-Oc3" secondAttribute="centerX" id="HdM-pn-rf6"/>
+                            <constraint firstItem="WAJ-a1-5MP" firstAttribute="top" secondItem="7cc-7J-RLd" secondAttribute="bottom" constant="8" id="I9v-7e-LPS"/>
+                            <constraint firstItem="0hi-hF-ATB" firstAttribute="bottom" secondItem="WAJ-a1-5MP" secondAttribute="bottom" constant="90" id="LyH-dE-VdG"/>
+                            <constraint firstItem="SUN-e6-izY" firstAttribute="top" secondItem="0hi-hF-ATB" secondAttribute="top" constant="10" id="Wwa-3q-VTw"/>
+                            <constraint firstItem="SUN-e6-izY" firstAttribute="centerX" secondItem="WAJ-a1-5MP" secondAttribute="centerX" id="iPi-U5-ZDa"/>
+                            <constraint firstItem="7cc-7J-RLd" firstAttribute="centerX" secondItem="SUN-e6-izY" secondAttribute="centerX" id="lNy-Kh-DeE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0hi-hF-ATB"/>
                     </view>
@@ -123,36 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qW2-8I-VgQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1753" y="35"/>
-        </scene>
-        <!--換金一覧-->
-        <scene sceneID="rL2-SV-Zfq">
-            <objects>
-                <viewController id="uiT-QU-xRy" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4SE-67-yNv">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is Item 1 page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tL4-jq-oHM">
-                                <rect key="frame" x="116" y="323" width="142" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="tL4-jq-oHM" firstAttribute="centerX" secondItem="4SE-67-yNv" secondAttribute="centerX" id="AmA-Mx-2BW"/>
-                            <constraint firstItem="tL4-jq-oHM" firstAttribute="centerY" secondItem="4SE-67-yNv" secondAttribute="centerY" id="Jsw-fZ-Pe6"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="dRL-SQ-fbG"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="換金一覧" id="zbo-kx-vj7"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YuE-Zg-227" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="425" y="-636"/>
+            <point key="canvasLocation" x="1752.8" y="34.632683658170919"/>
         </scene>
         <!--Animated Tab Bar Controller-->
         <scene sceneID="IQT-Nf-pGX">
@@ -214,7 +231,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="kcz-a5-T74" kind="relationship" relationship="rootViewController" id="sly-VT-o9I"/>
+                        <segue destination="SOe-pp-MxZ" kind="relationship" relationship="rootViewController" id="5TX-73-Omm"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ihO-bk-4e4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -243,7 +260,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="uiT-QU-xRy" kind="relationship" relationship="rootViewController" id="9KL-ge-hX6"/>
+                        <segue destination="u12-ys-GYo" kind="relationship" relationship="rootViewController" id="KoQ-zX-HXN"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rw5-Cq-FQ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -251,8 +268,48 @@
             </objects>
             <point key="canvasLocation" x="-303" y="-636"/>
         </scene>
+        <!--換金一覧-->
+        <scene sceneID="Wl5-U0-osA">
+            <objects>
+                <tableViewController id="u12-ys-GYo" customClass="CashListViewController" customModule="ThankYouRelay" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="D3C-kT-ASM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="cSw-ac-WdG" style="IBUITableViewCellStyleDefault" id="2wh-2t-oV8">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2wh-2t-oV8" id="ret-tV-Z45">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="サービス" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cSw-ac-WdG">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="u12-ys-GYo" id="OTz-so-cLv"/>
+                            <outlet property="delegate" destination="u12-ys-GYo" id="XGj-Lg-cvk"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="換金一覧" id="Vux-4L-aJQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o2c-zQ-tTS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="425" y="-636"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="GraphImage" width="232" height="309"/>
+        <image name="TopImage" width="232" height="309"/>
         <image name="cash_icon" width="30" height="30"/>
         <image name="handshake_icon" width="30" height="30"/>
         <image name="user_icon" width="30" height="30"/>
